Starting thesis skeleton

--- a/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/3-thesis.tex
@@ -1,15 +1,28 @@
 \chapter{Teza} \label{chap:thesis}
 
-\bt
+\section{Cel}
 
-\section{Podrozdział}
+W opracowanym rozwiązaniu wykonany został system plaujący ruch drogowy na skrzyżowaniach dróg wielopasmowych przy użyciu zmodyfikowanego algorytmu A*.
+\newline
+\newline
+Wynikiem rozwiązania jest szczegółowy opis, który dokładnie planuje ruch każdego z samochodów w celu najszybszego i bezpiecznego opuszczenia skrzyżowania.
+\newline
+\newline
+System zapewnia unikanie kolizji oraz optymalny dojazd do celu pojazdów na zadanej sieci skrzyżowań.
 
-\bt
+\section{Planowanie ruchu przy użyciu modyfikacji A*}
 
-\section{Podrozdział}
+\newline
+\newline
+Rozwiązanie mając podane położenie samochodów na sieci skrzyżowań liczy plan dla każdego z pojazdów. W planie znajdują się informacje jak szybko pojazd powinien jechać, kiedy powinien zwolnić lub przyspieszyć aby ominąć kolizję.
 
-\bt 
+\newline
+\newline
+Algorytm A* jest oparty o działanie na stanach. Pojedyńczym stanem jest rozmieszczenie pojazdów na sieci skrzyżowań wraz z ich prędkościami.
 
+\newline
+\newline
+Algorytm A* jest oparty o działanie na stanach. Pojedyńczym stanem jest rozmieszczenie pojazdów na sieci skrzyżowań wraz z ich prędkościami.
 \section{Podrozdział}
 
 \bt 
